feat: support cluster component types and cluster traits (#283)
Signed-off-by: yashodgayashan <yashodgayashan@gmail.com>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -251,6 +251,14 @@ catalog:
       rules:
         - allow: [Template]
     - type: file
+      target: ../../templates/create-openchoreo-clustercomponenttype/template.yaml
+      rules:
+        - allow: [Template]
+    - type: file
+      target: ../../templates/create-openchoreo-clustertrait/template.yaml
+      rules:
+        - allow: [Template]
+    - type: file
       target: ../../templates/create-openchoreo-componentworkflow/template.yaml
       rules:
         - allow: [Template]
